--- a/Asp_Lab1/Rozklad.UI/appsettings.json
+++ b/Asp_Lab1/Rozklad.UI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Rozklad;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "RozkladConnection": "Server=.;Database=Rozklad;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
