--- a/Asp_Lab1/Rozklad.UI/Rozklad.UI.csproj
+++ b/Asp_Lab1/Rozklad.UI/Rozklad.UI.csproj
@@ -18,4 +18,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Rozklad.Core\Rozklad.Core.csproj" />
+  </ItemGroup>
+
 </Project>
