--- a/Asp_Lab1/Rozklad.Repos/Rozklad.Repos.csproj
+++ b/Asp_Lab1/Rozklad.Repos/Rozklad.Repos.csproj
@@ -13,4 +13,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Rozklad.Core\Rozklad.Core.csproj" />
+  </ItemGroup>
+
 </Project>
