--- a/.gitignore
+++ b/.gitignore
@@ -397,3 +397,5 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 Asp_Lab1/Rozklad.UI/appsettings.json
+Asp_Lab1/Rozklad.Core/Migrations/20221019202601_Initial-Migration.Designer.cs
+Asp_Lab1/Rozklad.Core/Migrations/20221019202601_Initial-Migration.cs
