--- a/.gitignore
+++ b/.gitignore
@@ -399,3 +399,6 @@ FodyWeavers.xsd
 Asp_Lab1/Rozklad.UI/appsettings.json
 Asp_Lab1/Rozklad.Core/Migrations/20221019202601_Initial-Migration.Designer.cs
 Asp_Lab1/Rozklad.Core/Migrations/20221019202601_Initial-Migration.cs
+Asp_Lab1/Rozklad.UI/appsettings.json
+Asp_Lab1/Rozklad.Core/Migrations/20221019213953_Initial-Migration.cs
+Asp_Lab1/Rozklad.Core/Migrations/20221019213953_Initial-Migration.Designer.cs
